# MinerPulse

./: .env.example  .gitattributes  .gitignore  Cargo.toml  LICENSE  LICENSING.md  README.md  REPOSITORY.md  SECURITY.md  SOURCE-NOTICE.txt  VERSION.json
.cursor/rules/: minerpulse-strict.mdc
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release.yml  secrets.yml
.tauri/: minerpulse.key.pub
assets/matrix/: Matrix_10x.json  Matrix_1326.json
docs/: DEVELOPMENT.md
docs/user-guide/: README.md  en.md  ru.md  zh-CN.md
minerpulse-core/: Cargo.toml
minerpulse-core/examples/: read_probe.rs  slow_poll_probe.rs
minerpulse-core/src/: discovery.rs  entitlements.rs  error.rs  fetch_options.rs  import.rs  lib.rs  mac.rs  model.rs  mpulse.rs  mpulse_binary.rs  rate_limit.rs  tcp.rs  trace.rs
minerpulse-core/src/drivers/: README.md  antminer.rs  avalon.rs  avalon_cgminer.rs  avalon_chips.rs  avalon_commands.rs  generic.rs  json_util.rs  mod.rs  parse.rs  registry.rs  whatsminer.rs
minerpulse-core/src/drivers/antminer/: mac.rs
minerpulse-core/src/drivers/avalon/: mac.rs
minerpulse-core/src/drivers/whatsminer/: access.rs  advanced.rs  btminer_log.rs  control.rs  crypto.rs  errors.rs  layout.rs  layout_configs.json  legacy4028.rs  luci.rs  mac.rs  mod.rs  options.rs  pools.rs
minerpulse-desktop/: app-icon.json  package-lock.json  package.json
minerpulse-desktop/docs/: MINER_READ.md
minerpulse-desktop/src/: app.css  app.html
minerpulse-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
minerpulse-desktop/src-tauri/capabilities/: default.json  desktop.json
minerpulse-desktop/src-tauri/icons/: icon.icns
minerpulse-desktop/src-tauri/icons/android/values/: ic_launcher_background.xml
minerpulse-desktop/src-tauri/src/: diagnostic_log.rs  lib.rs  license.rs  main.rs  miner_credentials.rs  secure_store.rs  session_store.rs
minerpulse-desktop/src/lib/: avalonCommands.ts  chartHistory.ts  chipMatrix.ts  formatAppError.ts  formatMiner.ts  importFile.ts  lazyChips.ts  minerInvoke.ts  modalLayout.ts  netInput.ts  openFile.ts  openScanWindow.ts  pollSession.ts  sessionPlayer.ts  setupFileDrop.ts  setupNativeFileDrop.ts  snapshotUtils.ts  types.ts  updateCheck.ts  whatsminerChipAnalysis.ts  whatsminerChipMap.ts  whatsminerErrors.ts  whatsminerTimezones.json  whatsminerTimezones.ts  windowChrome.ts
minerpulse-desktop/src/lib/components/: AboutModal.svelte  CraneApplyAnimation.svelte  CupertinoSwitch.svelte  LineChart.svelte  ManagedModalCard.svelte  MinerChartsPanel.svelte  MinerChipMatrix.svelte  MinerCommandsPanel.svelte  MinerDataPanel.svelte  MinerPoolsPanel.svelte  SessionPlayerBar.svelte  SubscriptionModal.svelte  ToolbarBtn.svelte  ToolbarIcon.svelte  UpdateAvailableNotice.svelte  UpdateProgressModal.svelte  WhatsminerAuthModal.svelte  WhatsminerControlModal.svelte  WhatsminerErrorModal.svelte  WhatsminerSetupModal.svelte  WindowCaption.svelte
minerpulse-desktop/src/routes/: +page.svelte
minerpulse-desktop/static/: whatsminer-errors.json
minerpulse-desktop/static/matrix/: Matrix_11x.json  Matrix_1346.json  Matrix_15x160.json  Matrix_176.json  index.json
platform/: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
platform/apps/admin/: Dockerfile  nginx.conf
platform/apps/api/: Dockerfile  docker-entrypoint.sh  package.json
platform/apps/web/: Dockerfile  docker-entrypoint.sh
platform/deploy/: backup-postgres.sh  bootstrap-from-github.sh  configure.ps1  configure.sh  deploy.config.example  deploy.ps1  deploy.sh  install-on-vps.sh  install.sh  integrate-external-proxy.sh  setup-from-github.ps1  setup-from-github.sh  update.sh  verify-external-proxy.sh
platform/deploy/lib/: detect-host-upstream.sh  dns-preflight.sh  docker-install.sh  export-install-env.sh  load-config.sh  preflight.sh  prompt.sh  render-templates.sh
platform/deploy/templates/: .env.tpl  Caddyfile.tpl  env.tpl  external-proxy-snippet.txt
releases/: README.md  notes-v1.0.1-build104.md  notes-v1.0.1-build25.md  notes-v1.0.1-build32.md  notes-v1.0.1-build59.md  notes-v1.2.0-build117.md  notes-v1.2.0-build123.md  notes-v1.2.0-build133.md  update.json
scripts/: bump-build.mjs  check-secrets.mjs  extract-whatsminer-timezones.mjs  generate-whatsminer-errors.mjs  import-whatsminer-layouts.mjs  sync-version.mjs  tauri-dev.ps1
(+31 files in other folders)
