[package]
name = "minerpulse-core"
version = "1.0.1"
edition = "2021"
description = "MinerPulse core: miner drivers, TCP, snapshots, logs"
license = "LicenseRef-Proprietary"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
rayon = "1"
local-ip-address = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
base64 = "0.22"
