[package]
name = "minerpulse-core"
version = "1.2.0"
edition = "2021"
description = "MinerPulse core: miner drivers, TCP, snapshots, logs"
license = "LicenseRef-Proprietary"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
rayon = "1"
local-ip-address = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
base64 = "0.22"
digest_auth = "0.3"
md5 = "0.7"
aes = "0.8"
ecb = "0.1"
cipher = "0.4"
block-padding = "0.3"

[[example]]
name = "read_probe"
path = "examples/read_probe.rs"
