[package]
name = "minerpulse-desktop"
version = "0.1.0"
description = "MinerPulse — ASIC miner monitor"
authors = ["MinerPulse"]
edition = "2021"

[lib]
name = "minerpulse_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
minerpulse-core = { path = "../../minerpulse-core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
