[package]
name = "minerpulse-desktop"
version = "0.1.0"
description = "MinerPulse — ASIC miner monitor"
authors = ["MinerPulse"]
license = "LicenseRef-Proprietary"
publish = false
edition = "2021"

[lib]
name = "minerpulse_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"

[dependencies]
minerpulse-core = { path = "../../minerpulse-core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Graphics_Dwm"] }
